automatically backed up by learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -5,4 +5,8 @@
   #wall .tag-1 + #tag-2 {
   display: none;
   }
+
+  div[class = "slick wicked"] {
+    display: none
+  }
  /* write your override styles here */
