--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -6,7 +6,7 @@
   display: none;
   }
 
-  #wall div[class = "slick wicked"] {
+  body div#wall #tag-3.slick {
     display: none
   }
  /* write your override styles here */
