--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -9,4 +9,8 @@
   body div#wall #tag-3.slick {
     display: none
   }
+
+  #wall .parent #tag-4 {
+    display:none;
+  }
  /* write your override styles here */
