automatically backed up by learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -13,4 +13,8 @@
   #wall .parent #tag-4 {
     display:none;
   }
+
+  body div#wall .parent #tag-5.slick {
+    display:none;
+  }
  /* write your override styles here */
