--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -17,4 +17,8 @@
   body div#wall .parent #tag-5.slick {
     display:none;
   }
+
+  body div#wall div.parent div:last-child div#tag-6 {
+    display:none;
+  }
  /* write your override styles here */
