--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -22,7 +22,7 @@
     display:none;
   }
 
-  body > div#wall div.parent div > #tag-7.slick {
+  body > div#wall div.parent div:last-child div#tag-7.slick {
     display:none;
   }
  /* write your override styles here */
